--- a/about.html
+++ b/about.html
@@ -30,11 +30,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="index.html"
+              title="Homepage"
               >Home</a
             >
-            <a class="nav-link" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a class="nav-link" href="about.html" title="About me">About me</a>
+            <a class="nav-link" href="about.html#contact" title="Contact me"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
