--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                <a class="nav-link" href="about.html">About me</a>
-                <a class="nav-link" href="about.html#contact">Contact me</a>
+                <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Home</a>
+                <a class="nav-link" href="about.html" title="About me">About me</a>
+                <a class="nav-link" href="about.html#contact" title="Contact me">Contact me</a>
               </div>
             </div>
           </div>
@@ -36,7 +36,7 @@
     <h2>Hey! I'm</h2>
     <h1>S 🌞 L V A N A</h1>
     <h3>
-      🏳️‍🌈 Web & Content Design | Front- end development <br />
+      Web & Content Design | Front- end development <br />
       📍 in Amsterdam
     </div>
     </h3>
