add margins and responsive on mobile

--- a/about.html
+++ b/about.html
@@ -62,21 +62,21 @@
       </p>
     </div>
     <div class="row mb-5">
-      <div class="col-sm-4">
+      <div class="col-sm-4 mb-4">
         <img
           src="images/yoga.png"
           class="img-fluid rounded p-2 shadow"
           alt="Yoga app"
         />
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-4 mb-4">
         <img
           src="images/weather.png"
           class="img-fluid rounded p-2 shadow"
           alt="Weather app"
         />
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-4 mb-4">
         <img
           src="images/yogurt.png"
           class="img-fluid rounded p-2 shadow"
