--- a/index.html
+++ b/index.html
@@ -46,33 +46,33 @@
     </div>
     <div class="container mt-5">
       <div class="row mb-5">
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3">
           <img src="images/yoga.png" class="img-fluid rounded" alt="Yoga app">
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
           <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
-          <a href="#" class="primary-link">Launch Yoga app</a>
+          <a href="#" class="primary-link project-link">Launch Yoga app</a>
         </div>
       </div>
       <div class="row mb-5"> 
           <div class="col-md-6 mb-5">
             <h2 class="mb-3">Weather app</h2>
             <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
-            <a href="#" class="primary-link">Launch weather app</a>
+            <a href="#" class="primary-link project-link">Launch weather app</a>
           </div>
           <div class="col-md-6">
               <img src="images/weather.png" class="img-fluid rounded" alt="Weather app">
             </div>
         </div>
         <div class="row mb-5">
-            <div class="col-md-6">
+            <div class="col-md-6 mb-3">
               <img src="images/yogurt.png" class="img-fluid rounded" alt="Yogurt webpage">
             </div>
             <div class="col-md-6">
-              <h2 class="mb-3">Yogurt Webpage</h2>
+              <h2 class="mb">Yogurt Webpage</h2>
               <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
-              <a href="#" class="primary-link">Launch Yogurt app</a>
+              <a href="#" class="primary-link project-link">Launch Yogurt app</a>
             </div>
           </div>
 
